--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ sphinx:
           "pdiff": ["\\frac{\\partial^{#1}{#2}}{\\partial{#3}^{#1}}",3,'']
     hide_solutions: false
     html_theme: sphinx_book_theme
+    # html_theme: sphinx_orange_book_theme    
     # html_theme: sphinx_rtd_theme
     # html_theme: pydata_sphinx_theme
     # templates_path: ['_templates']  #This conflicts with sphinx_book_theme
