--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title     : Foundation Mathematics
+title     : Numerical Methods for Partial Differential Equations
 # author    : "<a href='mailto:z.ma@mmu.ac.uk'>Dr Zhihua Ma</a>"
 author    : "Dr Zhihua Ma"
 copyright : "2023---2025"  # Copyright year to be placed in the footer
-logo      : images/logob.svg
+# logo      : images/logob.svg
 email     : "z.ma@mmu.ac.uk"
 
 only_build_toc_files: true 
