--- a/_toc.yml
+++ b/_toc.yml
@@ -20,17 +20,41 @@ parts:
   #     sections: 
   #     - glob: chaps/01/chap01_*   
       
-  - caption: Challenging Exercises
+  # - caption: Challenging Exercises
+  #   maxdepth: 1
+  #   numbered: True
+  #   chapters:
+  #   - file: extraEx/extraEx1
+  #   - file: extraEx/extraEx2
+  #   - file: extraEx/extraEx3
+  #   - file: extraEx/extraEx4
+  #   - file: extraEx/extraEx5
+  #   - file: extraEx/extraEx6
+  #   - file: extraEx/extraEx7
+
+  # - caption: Partial Differential Equations
+  #   maxdepth: 1
+  #   numbered: True 
+  #   chapters:
+
+
+  # - caption: Linear Algebra
+  #   maxdepth: 1
+  #   numbered: True 
+  #   chapters:
+
+  - caption: Sparse Matrices
     maxdepth: 1
-    numbered: True
+    numbered: True 
     chapters:
-    - file: extraEx/extraEx1
-    - file: extraEx/extraEx2
-    - file: extraEx/extraEx3
-    - file: extraEx/extraEx4
-    - file: extraEx/extraEx5
-    - file: extraEx/extraEx6
-    - file: extraEx/extraEx7
+    - file: pde/sparseMatrix
+
+  - caption: Examples
+    maxdepth: 1
+    numbered: True 
+    chapters:  
+    - file: pde/1DPoissonEquation
+    - file: pde/2DPoissonEquation-xy
 
      
 
